# zpacloud-playbooks

./: .gitignore  .releaserc.json  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  zpa_app_connector_group_facts.yml  zpa_app_connector_group_info.yml  zpa_app_connector_groups.yml  zpa_application_segment.yml  zpa_application_segment_browser_access.yml  zpa_application_segment_browser_access_facts.yml  zpa_application_segment_browser_access_info.yml  zpa_application_segment_by_type_info.yml  zpa_application_segment_facts.yml  zpa_application_segment_info.yml  zpa_application_server.yml  zpa_application_server_facts.yml  zpa_application_server_info.yml  zpa_ba_certificate_facts.yml  zpa_ba_certificate_info.yml  zpa_cloud_connector_group_facts.yml  zpa_cloud_connector_group_info.yml  zpa_connector_assistant_schedule.yml  zpa_connector_assistant_schedule_info.yml  zpa_enrollment_cert_facts.yml  zpa_enrollment_cert_info.yml  zpa_idp_controller_facts.yml  zpa_idp_controller_info.yml  zpa_isolation_profile_info.yml  zpa_lss_config_controller.yml  zpa_machine_group_facts.yml  zpa_machine_group_info.yml  zpa_policy_access_forwarding_rule.yml  zpa_policy_access_forwarding_rule_facts.yml  zpa_policy_access_forwarding_rule_info.yml  zpa_policy_access_rule.yml  zpa_policy_access_rule_facts.yml  zpa_policy_access_rule_info.yml  zpa_policy_access_timeout_rule.yml  (+30 more)
.github/: set-version.sh
.github/workflows/: ansible-test-lint.yml  release.yml  zpa_test.yml
collections/: requirements.yml
