[tool.poetry]
name = "zpacloud-playbooks"
version = "1.0.2"
description = "Sample playbooks for the Zscaler Private Access Ansible modules"
authors = ["Zscaler, Inc. <devrel@zscaler.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/zscaler/zpacloud-playbooks"
repository = "https://github.com/zscaler/zpacloud-playbooks"
documentation = "https://zscaler-sdk-python.readthedocs.io"
keywords = ["zpacloud", "zpacloud-ansible", "zpa"]

[tool.poetry.dependencies]
python = "^3.9"
zscaler-sdk-python = ">=0.2.0"
xmltodict = "*"
boto3 = "*"
paramiko = "*"
urllib3 = "^1.26.19"

[tool.poetry.dev-dependencies]
ansible = "*"
ansible-lint = "*"
ansible-core = "*"

